@@ -746,6 +746,9 @@ Release 0.19.0 - Unreleased
     HADOOP-4249. Fix eclipse path to include the hsqldb.jar. (szetszwo via
     omalley)
 
+    HADOOP-4247. Move InputSampler into org.apache.hadoop.mapred.lib, so that
+    examples.jar doesn't depend on tools.jar. (omalley)
+
 Release 0.18.1 - 2008-09-17
 
   IMPROVEMENTS
